--- a/build.properties
+++ b/build.properties
@@ -1,19 +1,11 @@
-f.sandboxURL = https://test.salesforce.com
-sf.productionURL = https://login.salesforce.com
+#sf.username=someuser@gmail.com
+#sf.password=password+token
+#sf.serverUrl=https://login.salesforce.com 
+#sf.deployRoot=./src
+#sf.allowMissingFiles=true
+#sf.ignoreWarnings=true
+#sf.trace=true
+#sf.rollbackOnError=true
 
-sf.productionUsername = jagrelot@orgdemo.com
-sf.productionPassword = acumen123
-
-sf.acumenfullUsername = builduser@acumensolutions.com.acumenfull
-sf.acumenfullPassword = acumen1234
-
-sf.cledevUsername = builduser@acumensolutions.com.cledev
-sf.cledevPassword = acumen12345Jk3a0AJ3oUd6bNFNbgwNm3yK
-
-sf.username = builduser@acumensolutions.com.sandbox
-sf.password = sandboxPassword
-
-sf.maxPoll = 500
-sf.maxWaitMillis = 10000
-
-sf.testLevel = NoTestRun
+#valid values are NoTestRun, RunSpecifiedTests, RunLocalTests, RunAllTestsInOrg
+#sf.testLevel=NoTestRun
