--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
-#sf.username=someuser@gmail.com
-#sf.password=password+token
-#sf.serverUrl=https://login.salesforce.com 
+sf.username=jagrelot@orgdemo.com
+sf.password=acumen321OBn0XbKQqzCza5wvI0fRNTtJ
+sf.serverUrl=https://na59.salesforce.com
 #sf.deployRoot=./src
 #sf.allowMissingFiles=true
 #sf.ignoreWarnings=true
