--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,6 @@
 <project name="Schoolforce" default="validate" basedir="." xmlns:sf="antlib:com.salesforce">
 
-<taskdef resource="com/salesforce/antlib.xml" classPath="var/lib/jenkins/.ant/lib
-/ant-salesforce.jar" uri="antlib:com.salesforce"/>
+<taskdef resource="com/salesforce/antlib.xml" classPath="home/ubuntu/var/lib/jenkins/.ant/lib/ant-salesforce.jar" uri="antlib:com.salesforce"/>
 
   <property name="build.properties" value="build.properties" />
   <property file="${build.properties}" />
