--- a/src/settings/Knowledge.settings
+++ b/src/settings/Knowledge.settings
@@ -6,6 +6,7 @@
     <cases>
         <enableArticleCreation>false</enableArticleCreation>
         <enableArticlePublicSharingSites>false</enableArticlePublicSharingSites>
+        <enableCaseDataCategoryMapping>true</enableCaseDataCategoryMapping>
         <useProfileForPDFCreation>false</useProfileForPDFCreation>
     </cases>
     <defaultLanguage>en_US</defaultLanguage>
@@ -13,6 +14,7 @@
     <enableCreateEditOnArticlesTab>true</enableCreateEditOnArticlesTab>
     <enableExternalMediaContent>true</enableExternalMediaContent>
     <enableKnowledge>true</enableKnowledge>
+    <enableLightningKnowledge>false</enableLightningKnowledge>
     <showArticleSummariesCustomerPortal>false</showArticleSummariesCustomerPortal>
     <showArticleSummariesInternalApp>false</showArticleSummariesInternalApp>
     <showArticleSummariesPartnerPortal>false</showArticleSummariesPartnerPortal>
@@ -24,5 +26,15 @@
             </field>
         </caseFields>
         <useSuggestedArticlesForCase>false</useSuggestedArticlesForCase>
+        <workOrderFields>
+            <field>
+                <name>Subject</name>
+            </field>
+        </workOrderFields>
+        <workOrderLineItemFields>
+            <field>
+                <name>Subject</name>
+            </field>
+        </workOrderLineItemFields>
     </suggestedArticles>
 </KnowledgeSettings>
