Update build.properties (+1 squashed commits)
Squashed commits:

[d47bf4b] Update properties

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
-#sf.username=jagrelot@orgdemo.com
-#sf.password=acumen321OBn0XbKQqzCza5wvI0fRNTtJ
-#sf.serverUrl=https://na59.salesforce.com
+sf.username=jagrelot@orgdemo.com
+sf.password=qWaG131oAopF7plLBXEhwVsLKfqyEsv3
+sf.serverUrl=https://na59.salesforce.com
 #sf.deployRoot=./src
 #sf.allowMissingFiles=true
 #sf.ignoreWarnings=true
@@ -8,4 +8,4 @@
 #sf.rollbackOnError=true
 
 #valid values are NoTestRun, RunSpecifiedTests, RunLocalTests, RunAllTestsInOrg
-#sf.testLevel=NoTestRun
+sf.testLevel=NoTestRun
