--- a/src/package.xml
+++ b/src/package.xml
@@ -46,9 +46,9 @@
     <name>AutoResponseRules</name>
   </types>
   <types>
-    <members>DataCloudCompanyMatch</members>
+<!--     <members>DataCloudCompanyMatch</members>
     <members>DataCloudGeoLocation</members>
-    <members>DataCloudLeadAppend</members>
+    <members>DataCloudLeadAppend</members> -->
     <name>CleanDataService</name>
   </types>
   <types>
@@ -498,12 +498,10 @@
     <members>Name</members>
     <members>Opportunity</members>
     <members>Order</members>
-    <members>OrgPreference</members>
     <members>PathAssistant</members>
     <members>PersonalJourney</members>
     <members>Product</members>
     <members>Quote</members>
-    <members>Search</members>
     <members>Security</members>
     <name>Settings</name>
   </types>
