Revert "Update test level"
This reverts commit fdd8b81530158f9e5ba03a365cb3603ede25fcae.

--- a/build.properties
+++ b/build.properties
@@ -8,4 +8,4 @@ sf.serverUrl=https://na59.salesforce.com
 #sf.rollbackOnError=true
 
 #valid values are NoTestRun, RunSpecifiedTests, RunLocalTests, RunAllTestsInOrg
-sf.testLevel=RunAllTestsInOrg
+sf.testLevel=NoTestRun
