--- a/build.properties
+++ b/build.properties
@@ -8,4 +8,4 @@ sf.serverUrl=https://na59.salesforce.com
 #sf.rollbackOnError=true
 
 #valid values are NoTestRun, RunSpecifiedTests, RunLocalTests, RunAllTestsInOrg
-sf.testLevel=NoTestRun
+sf.testLevel=RunAllTestsInOrg
