Revert "Comment out Custom Tabs"
This reverts commit 4469826ec72380e0720b3d6f7375c4d4efa1371d.

--- a/src/package.xml
+++ b/src/package.xml
@@ -215,10 +215,10 @@
         <members>*</members>
         <name>CustomSite</name>
     </types>
-<!--     <types>
+    <types>
         <members>*</members>
         <name>CustomTab</name>
-    </types> -->
+    </types>
     <types>
         <members>CompanyDashboards</members>
         <members>CompanyDashboards/AdoptionDashboard</members>
