--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@ sf.password=acumen123lFCaWeeKtqiXNoIgYo1suEcEV
 sf.serverUrl=https://na59.salesforce.com
 #sf.deployRoot=./src
 #sf.allowMissingFiles=true
-#sf.ignoreWarnings=true
+sf.ignoreWarnings=true
 #sf.trace=true
 #sf.rollbackOnError=true
 
