--- a/src/package.xml
+++ b/src/package.xml
@@ -292,11 +292,11 @@
         <members>*</members>
         <name>FlexiPage</name>
     </types>
-<!--     <types>
+     <types>
         <members>*</members>
         <name>Flow</name>
     </types> -->
-<!--     <types>
+     <types>
         <members>*</members>
         <name>FlowDefinition</name>
     </types> -->
