--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project name="Schoolforce" default="validate" basedir="." xmlns:sf="antlib:com.salesforce">
+<project name="JoseForce" default="validate" basedir="." xmlns:sf="antlib:com.salesforce">
 
 <taskdef resource="com/salesforce/antlib.xml" classPath="${ant.library.dir}/ant-salesforce.jar" uri="antlib:com.salesforce"/>
 
