chang build properties

--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,11 @@
-#sf.username=jagrelot@orgdemo.com
-#sf.password=acumen321OBn0XbKQqzCza5wvI0fRNTtJ
-#sf.serverUrl=https://na59.salesforce.com
-#sf.deployRoot=./src
-#sf.allowMissingFiles=true
-#sf.ignoreWarnings=true
-#sf.trace=true
-#sf.rollbackOnError=true
+sf.username=jagrelot@orgdemo.com
+sf.password=acumen321OBn0XbKQqzCza5wvI0fRNTtJ
+sf.serverUrl=https://na59.salesforce.com
+sf.deployRoot=./src
+sf.allowMissingFiles=true
+sf.ignoreWarnings=true
+sf.trace=true
+sf.rollbackOnError=true
 
 #valid values are NoTestRun, RunSpecifiedTests, RunLocalTests, RunAllTestsInOrg
-#sf.testLevel=NoTestRun
+sf.testLevel=NoTestRun
