--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 sf.username=jagrelot@orgdemo.com
-sf.password=acumen321OBn0XbKQqzCza5wvI0fRNTtJ
+sf.password=@cumen1234m50h5Regtun07dlSrtjnMr4IV
 sf.serverUrl=https://na59.salesforce.com
 sf.deployRoot=./src
 sf.allowMissingFiles=true
