Clean package.xml

--- a/src/package.xml
+++ b/src/package.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
  <types>
     <members>Case</members>
@@ -24,7 +24,6 @@
     <members>AssetRelationship</members>
     <members>AssistantProgress</members>
     <members>Campaign</members>
-    <members>CampaignMember</members>
     <members>Case</members>
     <members>CaseContactRole</members>
     <members>Contact</members>
@@ -33,11 +32,9 @@
     <members>ContractContactRole</members>
     <members>DuplicateRecordItem</members>
     <members>DuplicateRecordSet</members>
-    <!-- <members>EmailMessage</members> -->
     <members>Event</members>
     <members>ExchangeUserMapping</members>
     <members>FeedItem</members>
-<!--     <members>ForecastingCategoryMapping</members> -->
     <members>Idea</members>
     <members>Lead</members>
     <members>Macro</members>
@@ -178,14 +175,12 @@
     <members>AssetRelationship</members>
     <members>AssistantProgress</members>
     <members>Campaign</members>
-    <members>CampaignMember</members>
     <members>Case</members>
     <members>CaseComment</members>
     <members>Contact</members>
     <members>Contract</members>
     <members>DuplicateRecordItem</members>
     <members>DuplicateRecordSet</members>
-<!--     <members>EmailMessage</members> -->
     <members>Event</members>
     <members>ExchangeUserMapping</members>
     <members>FeedItem</members>
@@ -391,10 +386,6 @@
     <members>*</members>
     <name>Letterhead</name>
   </types>
-<!--   <types>
-    <members>*</members>
-    <name>NamedCredential</name>
-  </types> -->
   <types>
     <members>*</members>
     <name>PathAssistant</name>
@@ -419,18 +410,10 @@
     <members>*</members>
     <name>Queue</name>
   </types>
-<!--   <types>
-    <members>*</members>
-    <name>QuickAction</name>
-  </types>
- -->  <types>
+  <types>
     <members>*</members>
     <name>RemoteSiteSetting</name>
   </types>
-<!--   <types>
-    <members>*</members>
-    <name>ReportType</name>
-  </types> -->
   <types>
     <members>*</members>
     <name>Role</name>
