--- a/deploy/package.xml
+++ b/deploy/package.xml
@@ -1,9 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>DataLoadScript</members>
+        <members>FlowFinishLocation</members>
+        <members>LeadingCompetitorTest</members>
+        <members>ManagingApex1Test</members>
         <members>WarrantySummary</members>
-        <members>checkbox</members>
+        <members>WarrantySummaryTest</members>
         <name>ApexClass</name>
+    </types>
+    <types>
+        <members>NewApplicationFlowPage</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>AccountManualDeDupe</members>
+        <members>AssignLeadGrade</members>
+        <members>CheckSecretInformation</members>
+        <members>HelloWorldTrigger</members>
+        <members>LeadingCompetitor</members>
+        <members>WarrantySummary</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>Admin</members>
+        <members>Analytics Cloud Integration User</members>
+        <members>Analytics Cloud Security User</members>
+        <members>Assignment Manager_1</members>
+        <members>Chatter External User</members>
+        <members>Chatter Free User</members>
+        <members>Chatter Moderator User</members>
+        <members>Chatter Only User</members>
+        <members>Company Communities User</members>
+        <members>ContractManager</members>
+        <members>Customer Community Login User</members>
+        <members>Customer Community Plus Login User</members>
+        <members>Customer Community Plus User</members>
+        <members>Customer Community User</members>
+        <members>Guest License User</members>
+        <members>High Volume Customer Portal User</members>
+        <members>MarketingProfile</members>
+        <members>Partner Community Login User</members>
+        <members>Partner Community User</members>
+        <members>ReadOnly</members>
+        <members>SolutionManager</members>
+        <members>Standard</members>
+        <members>StandardAul</members>
+        <members>Work%2Ecom Only User</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>Account</members>
+        <members>ApplicationAssociation__c</members>
+        <members>Application__c</members>
+        <members>Asset</members>
+        <members>AssetRelationship</members>
+        <members>AssistantProgress</members>
+        <members>Campaign</members>
+        <members>CampaignMember</members>
+        <members>Contact</members>
+        <members>Contract</members>
+        <members>DuplicateRecordItem</members>
+        <members>DuplicateRecordSet</members>
+        <members>EmailMessage</members>
+        <members>Event</members>
+        <members>ExchangeUserMapping</members>
+        <members>FeedItem</members>
+        <members>Idea</members>
+        <members>Lead</members>
+        <members>Macro</members>
+        <members>MacroAction</members>
+        <members>MacroInstruction</members>
+        <members>Opportunity</members>
+        <members>OpportunityLineItem</members>
+        <members>Order</members>
+        <members>OrderItem</members>
+        <members>Organization</members>
+        <members>Product2</members>
+        <members>ProfileSkill</members>
+        <members>ProfileSkillEndorsement</members>
+        <members>ProfileSkillUser</members>
+        <members>SOSSession</members>
+        <members>SOSSessionActivity</members>
+        <members>Site</members>
+        <members>SocialPersona</members>
+        <members>SocialPost</members>
+        <members>Solution</members>
+        <members>StreamingChannel</members>
+        <members>Task</members>
+        <members>User</members>
+        <members>UserLicense</members>
+        <members>UserProvisioningRequest</members>
+        <members>WorkBadge</members>
+        <members>WorkBadgeDefinition</members>
+        <members>WorkOrder</members>
+        <members>WorkOrderLineItem</members>
+        <members>WorkThanks</members>
+        <name>Workflow</name>
     </types>
     <version>42.0</version>
 </Package>
