--- a/thorax/scripts/std/build.xml
+++ b/thorax/scripts/std/build.xml
@@ -61,7 +61,7 @@ Except for the limited rights to use and make copies of the Software as provided
 
     <target name="buildPackageDir">
         <exec executable="python3" failonerror="true">
-            <arg line="scripts/std/packagedir.py -i ${rootArg}/deploy -v ${sf.apiVersion}" />
+            <arg line="scripts/std/packagedir.py -i ${rootArg}/src -v ${sf.apiVersion}" />
         </exec>
     </target>
 
